// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clearRefinements() with refinements calls twice render(<ClearAll props />, container) 1`] = `
Object {
  "cssClasses": Object {
    "button": "ais-ClearRefinements-button",
    "disabledButton": "ais-ClearRefinements-button--disabled",
    "root": "ais-ClearRefinements",
  },
  "hasRefinements": true,
  "refine": [Function],
  "templateProps": Object {
    "templates": Object {
      "resetLabel": "Clear refinements",
    },
    "templatesConfig": Object {},
    "useCustomCompileOptions": Object {
      "resetLabel": false,
    },
  },
}
`;

exports[`clearRefinements() with refinements calls twice render(<ClearAll props />, container) 2`] = `
Object {
  "cssClasses": Object {
    "button": "ais-ClearRefinements-button",
    "disabledButton": "ais-ClearRefinements-button--disabled",
    "root": "ais-ClearRefinements",
  },
  "hasRefinements": true,
  "refine": [Function],
  "templateProps": Object {
    "templates": Object {
      "resetLabel": "Clear refinements",
    },
    "templatesConfig": Object {},
    "useCustomCompileOptions": Object {
      "resetLabel": false,
    },
  },
}
`;

exports[`clearRefinements() without refinements calls twice render(<ClearRefinements props />, container) 1`] = `
Object {
  "cssClasses": Object {
    "button": "ais-ClearRefinements-button",
    "disabledButton": "ais-ClearRefinements-button--disabled",
    "root": "ais-ClearRefinements",
  },
  "hasRefinements": false,
  "refine": [Function],
  "templateProps": Object {
    "templates": Object {
      "resetLabel": "Clear refinements",
    },
    "templatesConfig": Object {},
    "useCustomCompileOptions": Object {
      "resetLabel": false,
    },
  },
}
`;

exports[`clearRefinements() without refinements calls twice render(<ClearRefinements props />, container) 2`] = `
Object {
  "cssClasses": Object {
    "button": "ais-ClearRefinements-button",
    "disabledButton": "ais-ClearRefinements-button--disabled",
    "root": "ais-ClearRefinements",
  },
  "hasRefinements": false,
  "refine": [Function],
  "templateProps": Object {
    "templates": Object {
      "resetLabel": "Clear refinements",
    },
    "templatesConfig": Object {},
    "useCustomCompileOptions": Object {
      "resetLabel": false,
    },
  },
}
`;
